# lvgl_for_rtthread_spark_one

./: CMakeLists.txt  README.md  example.ioc  lv_conf.h
bsp/: lcd.c  lcd.h
examples/porting/: lv_port_disp_template.c  lv_port_indev_template.h
examples/widgets/btnmatrix/: lv_example_btnmatrix_1.c
src/: lv_port_disp.c  lv_port_disp.h
src/core/: lv_obj.c  lv_port_disp.h  lv_port_fs.h
